# Building_A_Neural_Network

./: .gitignore  Building_A_Neural_Network.code-workspace  Dockerfile  README.md  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: neural_network_ci.yml
Classes/: Layer.py
Functions/: Loss.py  deEnoder.py
model_store/: numpy_neural_network_log.json  numpy_neural_network_v1.pkl
src/: Layer.py  config.py  data_loader.py  model.py  pipeline.py  preprocessing.py
src/Classes/: NeuralNetwork.py
src/Functions/: Sigmoid.py  deEncoder.py  toList.py
tests/e2e/: test_e2e.py
tests/unit/: test_data_loader.py  test_main.py  test_model.py  test_pipeline.py  test_preprocessing.py
